--- a/Views/pages/css/style.css
+++ b/Views/pages/css/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;-
 }
 
-body{
-  background-color: white;
+body, html{
+  height: 100%
+}
+
+#v-center{
+  height: 100px;
+  
 }
